syntax = "proto3";
package proto;

option java_multiple_files = true;
option java_package = "generated";
option java_outer_classname = "Proto";

service  user {
  rpc EmptyReq(Empty) returns (Empty);

  rpc GeometricVolume(Solid) returns (Volume);
  rpc GeometricSurface(Solid) returns (Area);

  rpc SecondDegreeSolve(Polynome) returns (SecondDegreeRoot);
  rpc ThirdDegreeSolve(Polynome) returns (ThirdDegreeRoot);

  rpc SecondDegreeDerivative(Polynome) returns (Polynome);
  rpc ThirdDegreeDerivative(Polynome) returns (Polynome);
}

message Solid {
  float height = 1;
  float length = 2;
  float width = 3;
}

message Area {
  double area = 1;
}

message Volume {
  double volume = 1;
}

message IntValue {
  int32 value = 1;
}

message Polynome {
  string polynome = 1;
}

message SecondDegreeRoot {
  double x1 = 1;
  double x2 = 2;
}

message ThirdDegreeRoot {
  double x1 = 1;
  double x2 = 2;
  double x3 = 3;
}

message Empty{

}